[package]
name = "ryts"
version = "0.1.0"
authors = ["chlo"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
regex = "1.4.5"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2.33"
dyn-clone = "1.0.4"
structopt = "0.3.21"
indicatif = "0.15.0"
select = "0.5"
tui = {version = "0.14", default-features = false, features = ['crossterm']}
crossterm = "0.19.0"
[lib]
name = "ryts"
path = "src/lib.rs"
[[bin]]
name= "rytsCLTool"
path= "src/bin/rytsCLTool.rs"