[package]
name = "ryts"
version = "0.1.0"
authors = ["chlo"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
regex = "1.4.5"
lazy_static = "1.4.0"
rayon="*"
crossbeam="*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2.33"
structopt = "0.3.21"
indicatif = "0.16.2"
select = "0.5"
skim = "*"
unicode-truncate= "0.2.0"
env_logger="*"
log="*"
bytes="*"
image="*"

[profile.release]
# debug = true
lto = false

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "yt_bench"
harness = false

