[package]
name = "ryts"
version = "0.1.0"
authors = ["chlo"]
edition="2024"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "*", features = ["json", "blocking"] }
regex = "*"
image = "0.25.10"
lazy_static = "*"
rayon="*"
crossbeam="*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
clap = "*"
structopt = "*"
indicatif = "*"
select = "*"
skim = "*"
unicode-truncate= "*"
env_logger="*"
log="*"
bytes="*"

[profile.release]
# debug = true
lto = false

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "yt_bench"
harness = false

